<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="-400dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/bantutani_logo_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.bantutani.application.customText.UsernameTextField
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        android:background="@drawable/border_et"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:alpha="1" />

    <com.bantutani.application.customText.PasswordTextField
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        android:background="@drawable/border_et"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:alpha="1" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ssp_light"
        android:text="@string/forget_password"
        android:alpha="0"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        tools:alpha="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:background="@drawable/button_login"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/login"
        android:alpha="0"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_password" />

    <TextView
        android:id="@+id/atau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/concertone_regular"
        android:text="@string/atau"
        android:alpha="0"
        tools:alpha="1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_register"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/register"
        android:textAllCaps="false"
        android:alpha="0"
        tools:alpha="1"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atau" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>