<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/register_bg">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="-530dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/bantutani_logo_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.bantutani.application.customText.NameTextField
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="25"
        android:padding="16dp"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_et"
        android:drawableStart="@drawable/ic_nama"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"/>

    <com.bantutani.application.customText.UsernameTextField
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="8"
        android:padding="16dp"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_et"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama"/>

    <com.bantutani.application.customText.EmailTextField
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:maxLength="25"
        android:padding="16dp"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_et"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"/>

    <com.bantutani.application.customText.PasswordTextField
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:maxLength="25"
        android:padding="16dp"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_et"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"/>

    <com.bantutani.application.customText.PasswordTextField
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:maxLength="25"
        android:padding="16dp"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_et"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/daftar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="20dp"
        android:text="@string/daftar"
        android:textAllCaps="false"
        android:fontFamily="@font/inter_semibold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="20dp"
        android:text="@string/kembali"
        android:textAllCaps="false"
        android:fontFamily="@font/inter_semibold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/round_btn_wn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daftar" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>