<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/price_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/comodity_image"
                android:layout_width="100dp"
                android:layout_height="69dp"
                tools:src="@color/green"
                android:scaleType="centerCrop"
                android:background="@color/grey"
                android:contentDescription="@string/content_description_media"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/comodity_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/app_name"
                    android:textStyle="bold"
                    android:fontFamily="@font/ssp_reg"
                    android:background="@color/grey"
                    android:textSize="10sp"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    />
                <TextView
                    android:id="@+id/comodity_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@color/grey"
                    tools:text="@string/comodityPrice"
                    android:textSize="6sp"
                    android:fontFamily="@font/ssp_reg"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary"
                    />
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>